Test/errors/err_queue_noncopyable_elem.cb
// queue<T> COPIES a value element on the plain enqueue(). A value type that owns a `unique`
// pointer has no copy(), so the plain overload is poisoned instead of failing to instantiate.
// The transfer overload q.enqueue(move x) stays usable - see test_collection_leaks.cb.
import "queue.cb";
class QRes { int id = default; };
class QHolder { unique QRes* r = default; int k = default; };
expect_error("write 'move' at the call site (q.enqueue(move x))");
extern int main()
{
    queue<QHolder> q;
    QHolder h = default;
    q.enqueue(h);
    return 0;
}
